<resources>
    <string name="app_name">alertaCiudadana</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_menu_drawer">MenuDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Incidentes</string>
    <string name="menu_gallery">Perfil</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_session">Cerrar Session</string>

    <!-- -->
    <string name="forget_password">¿Olvidaste tu Contraseña?</string>}
    <string name="login">Acceder</string>
    <string name="skip_login">Omitir login ></string>}
    <string name="keep_session">Recuerdame</string>
    <string name="signup">Registrarse</string>

    <!-- -->
    <string name="msg_token_fmt" translatable="false">FCM registration Token: %s</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <!--
        This is the name that users will see when interacting with this channel.
        It should describe the category of notifications that will be sent through this channel
     -->
    <!-- [START fcm_default_icon_string] -->
    <string name="default_notification_channel_name" translatable="true">Weather</string>
    <!-- [END fcm_default_icon_string] -->
    <string name="msg_subscribe_failed">Failed to subscribe to weather topic</string>
    <string name="fcm_message">FCM Message</string>
    <string name="title_activity_maps">MapsActivity</string>

    <!---->
    <string-array name="gender">
        <item>Femenino</item>
        <item>Masculino</item>
    </string-array>

    <!--
        variable for settings actions gps
     -->
    <string name="msg_settings_gps">Para Continuar, activa la ubicación del dispositivo, que usa el servicio de ubicación de Google.</string>
    <string name="location_updated">Location Updated: %1$s</string>
    <string name="remove_location_updates">remove_location_updates</string>
    <string name="launch_activity">launch_activity</string>

</resources>